<resources>
    <string name="app_name">ChrisAbel_GreenFlag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_requirements">Your password should have a minimum of 8 characters and contain at least one number, one uppercase, one lower case letter. You can use special characters.</string>
    <string name="back_button">Back Button</string>
    <string name="create_an_account">Create an account</string>
    <string name="page_divider">Page Divider</string>
    <string name="email_address">Email Address:</string>
    <string name="email">Email</string>
    <string name="green_check_mark">Green Check Mark</string>
    <string name="red_cross">red cross</string>
    <string name="border">border</string>
    <string name="account_already_exists">An account already exists for this email address</string>
    <string name="create_password">Create password:</string>
    <string name="repeat_password">Repeat Password:</string>
    <string name="invalid_password">One of the passwords you entered wasn\'t valid</string>
    <string name="passwords_dont_match">Your passwords don\'t match</string>
    <string name="green_background">green_background</string>
    <string name="next">Next</string>
    <string name="green_flag_logo">Green Flag Logo</string>
    <string name="greenflag_customers_can_create_an_account">GreenFlag customers can create an account to access</string>
    <string name="car_health_updates">Car health updates</string>
    <string name="request_a_rescue_online">Request a rescue online</string>
    <string name="policy_information">Policy information</string>
</resources>