<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black"
    android:paddingTop="60dp"
    android:paddingBottom="40dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    >

    <ImageView
        android:id="@+id/iv_green_flag_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_green_flag"
        android:contentDescription="@string/green_flag_logo"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ib_create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_intro_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_sans_300"
            android:text="@string/greenflag_customers_can_create_an_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="10dp"
            />
        <TextView
            android:id="@+id/tv_first_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_health_updates"
            android:textSize="18sp"
            android:fontFamily="@font/museo_sans_300"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"

            app:layout_constraintTop_toBottomOf="@id/tv_intro_comment"
            app:layout_constraintStart_toEndOf="@id/iv_first_tick"

            />
        <ImageView
            android:id="@+id/iv_first_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_intro_comment"
            app:layout_constraintTop_toTopOf="@id/tv_first_point"
            app:layout_constraintBottom_toBottomOf="@id/tv_first_point"
            android:src="@drawable/tick"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:contentDescription="@string/green_check_mark"
            />
        <TextView
            android:id="@+id/tv_second_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_a_rescue_online"
            android:textSize="18sp"
            android:fontFamily="@font/museo_sans_300"
            android:textColor="@color/white"
            android:padding="5dp"

            app:layout_constraintTop_toBottomOf="@id/tv_first_point"
            app:layout_constraintStart_toEndOf="@id/iv_second_tick"
            />
        <ImageView
            android:id="@+id/iv_second_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_intro_comment"
            app:layout_constraintTop_toTopOf="@id/tv_second_point"
            app:layout_constraintBottom_toBottomOf="@id/tv_second_point"
            android:src="@drawable/tick"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:contentDescription="@string/green_check_mark"
            />
        <TextView
            android:id="@+id/tv_third_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/policy_information"
            android:textSize="18sp"
            android:fontFamily="@font/museo_sans_300"
            android:textColor="@color/white"
            android:padding="5dp"

            app:layout_constraintTop_toBottomOf="@id/tv_second_point"
            app:layout_constraintStart_toEndOf="@id/iv_first_tick"

            />
        <ImageView
            android:id="@+id/iv_third_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_intro_comment"
            app:layout_constraintTop_toTopOf="@id/tv_third_point"
            app:layout_constraintBottom_toBottomOf="@id/tv_third_point"
            android:src="@drawable/tick"
            android:paddingEnd="10dp"
            android:paddingStart="0dp"
            android:contentDescription="@string/green_check_mark"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ib_create_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/gradient_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/green_background"
        />
<!--    Using dp rather than sp to make it look better on different screen sizes,
        and prevent scaling downsizing text on image-->
    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="20dp"
        app:layout_constraintTop_toTopOf="@id/ib_create_account"
        app:layout_constraintBottom_toBottomOf="@id/ib_create_account"
        app:layout_constraintStart_toStartOf="@id/ib_create_account"
        app:layout_constraintEnd_toEndOf="@id/ib_create_account"
        tools:ignore="SpUsage"
        />


</androidx.constraintlayout.widget.ConstraintLayout>